--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,11 +53,11 @@ jobs:
           terraform_version: 1.4.5
       - name: Initialize configuration
         run: terraform init
-        #run: |
-        #  terraform init -input=false \
-        #    -backend-config="bucket=${{ vars.S3_BACKEND_BUCKET }}" \
-        #    -backend-config="key=${{ vars.S3_BACKEND_KEY }}" \
-        #    -backend-config="dynamodb_table=${{ vars.S3_BACKEND_DYNAMDB_TABLE }}"
+        run: |
+          terraform init -input=false \
+            -backend-config="bucket=${{ vars.S3_BACKEND_BUCKET }}" \
+            -backend-config="key=${{ vars.S3_BACKEND_KEY }}" \
+            -backend-config="dynamodb_table=${{ vars.S3_BACKEND_DYNAMDB_TABLE }}"
       - name: Plan
         run: terraform plan -out plan.tfplan -input=false
       #- name: Apply
