--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,8 +36,10 @@ jobs:
 #      - name: Validate configuration
 #        run: terraform validate
 
-  plan-apply:
-    name: Plan & Apply
+# DRT - changed from plan-apply to plan-apply-destroy since it is tested and I want to make sure I automatically destroy the infra.
+#       later I can look up how to do a manual destroy
+  plan-apply-destroy:
+    name: Plan & Apply & Destroy
 #    needs: [validate]
     runs-on: ubuntu-latest
     env:
@@ -62,3 +64,6 @@ jobs:
       - name: Apply
         if: ${{ github.ref_name == 'main' }}
         run: terraform apply -input=false plan.tfplan
+      - name: Destroy 
+        if: ${{ github.ref_name == 'main' }}
+        run: terraform destroy --auto-approve
